--- a/style.css
+++ b/style.css
@@ -1,1 +1,80 @@
-hi
+header {
+    height: 727px;
+    width: 16%;
+    border: 1px solid black;
+    padding: 8px 12px 20px 12px;
+    background-color: black;
+    border-radius: 10px 0 0 10px;
+}
+.logo {
+    height:90px;
+    /* border: 2px white solid; */
+}
+
+#logo_img {
+  height: 50px;
+  width: 50%;
+  background-color: black;
+ padding: 2px 1px 2px 1px;
+ position: relative;
+ top: 10px;
+ left: 15px;
+
+  
+    
+}
+
+.list-group-item.btn-item {
+  background-color: black;
+   border: none;
+   
+}
+
+.btn-item {
+  height: 55px;
+  border-radius: 10px;
+  background-color: black;
+  border: none;
+}
+
+.btn-item h6 {
+    height: 100%;
+    width: 100%;
+  color: white;
+background-color: black !important;
+
+}
+
+.imgInsta {
+    height: 25px;
+    width: 35px;
+    background-color: black;
+    padding-right:10px ;
+}
+
+i {
+    height: 15px;
+    width: 30px;
+}
+
+.imgTreads {
+    height: 35px;
+    width: 40px;
+    background-color: black;
+    position: relative;
+    left: -10px;
+}
+
+#hamberger {
+    height: 60px;
+    width: 80%;
+    /* background-color: white; */
+    border: 2px white solid;
+  
+}
+
+.MoreHamber {
+    position: relative;
+    right: 50px;
+    color: white;
+}
